# Backend/src/routes/auth/2faLogin.js
@@ -1,9 +1,10 @@
-import bcrypt from "bcrypt";
+import crypto from "crypto";
+import { generateTokens } from "./login.js";
 
 export default function login_2fa(server) {
 	const opts = {
 		schema: {
-			description: "Sends the 2fa code to be verified",
+			description: "Verify a user's 2FA code sent during login",
 			tags: ["auth"],
 			querystring: {
 				type: "object",
@@ -19,17 +20,42 @@ export default function login_2fa(server) {
 			body: {
 				type: "object",
 				required: ["code"],
+				description: "6-digit code sent to user email or app",
 				properties: {
 					code: { type: "string", minLength: 6, maxLength: 6 },
 				},
 			},
+			response: {
+				200: {
+					description: "Login successful",
+					type: "object",
+					required: ["accessToken", "id"],
+					properties: {
+						accessToken: { type: "string" },
+						id: { type: "integer" },
+					},
+				},
+
+				401: {
+					description: "Unauthorized: Invalid token or code",
+					$ref: "errorResponse#",
+				},
+				500: {
+					description: "Internal Server Error",
+					$ref: "errorResponse#",
+				},
+				default: {
+					description: "Unexpected error",
+					$ref: "errorResponse#",
+				},
+			},
 		},
 	};
-	server.post("/login/2fa", async (req, reply) => {
+	server.post("/login/2fa", opts, async (req, reply) => {
 		const { code } = req.body;
 		const twoFaToken = req.query.token;
 
-		const user = db.prepare("SELECT code_hash_2fa, code_expires_2fa, id FROM users WHERE token_2fa = ?").get(twoFaToken);
+		const user = server.db.prepare("SELECT code_hash_2fa, code_expires_2fa, id FROM users WHERE token_2fa = ?").get(twoFaToken);
 		if (!user) {
 			return reply.status(401).send({ error: "Unauthorized", message: "Invalid token" });
 		}
@@ -41,7 +67,17 @@ export default function login_2fa(server) {
 		if (inputHash !== user.code_hash_2fa) {
 			return reply.status(401).send({ error: "Unauthorized", message: "Invalid code" });
 		}
-		db.prepare(`UPDATE users SET code_hash_2fa = null, code_expires_2fa = null, token_2fa = null WHERE id = ?`).run(user.id);
-		return reply.status(200).send({ success: true, message: "Acess granted!" });
+		server.db
+			.prepare(
+				`
+						UPDATE users 
+							SET code_hash_2fa = null, 
+							code_expires_2fa = null, 
+							token_2fa = null 
+						WHERE id = ?
+						`
+			)
+			.run(user.id);
+		return generateTokens(server, user, reply);
 	});
 }
